# librelog

./: .dockerignore  .gitignore  =2.1.1  AGENTS.md  ARCHIVE.md  BUSINESS_LOGIC_WORKFLOW.md  CLOCK_BUILDER_FRONTEND_REVIEW.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  HOSTS_FILE_SETUP.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_PLAN_PHASE1.md  INSTALL-JDK.sh  INTEGRATION_COMPLETE.md  LEAN_ROADMAP_2PERSON.md  LIBRETIME_INTEGRATION.md  LIBRETIME_INTEGRATION_SETUP.md  MEDIA_LIBRARY_SYNC.md  NEXT_2_WEEKS_TASKS.md  QA-REPORT.md  QA_TEST_REPORT.md  README-BUILD.md  README.md  RELEASE_NOTES.md  ROADMAP_B-C-A.md  TESTING.md  TRACK_TYPES_AND_CONFIG_SETUP.md  UUID_MIGRATION_READY.md  VERSIONS.md  WIDEORBIT_COMPETITIVE_ANALYSIS.md  api_test_results.json  check-deployment.sh  cleanup_empty_clock_templates.py  create_and_push_log.py  create_clock_template.py  deploy-docker.sh  deploy.sh  docker-compose.yml  endpoints_catalog.json  (+11 more)
backend/: Dockerfile  alembic.ini  database.py  main.py  middleware.py  pyproject.toml  requirements.txt  test_libretime.py  test_log_generation_detailed.py  test_system_comprehensive.py
backend/alembic/: env.py
backend/auth/: oauth2.py  password_validator.py  token_manager.py
backend/integrations/: api_connector.py  azuracast_client.py  azuracast_sync.py  libretime_client.py  type_mapping.py
backend/logging/: audit.py
backend/middleware/: __init__.py  rate_limit.py  security_headers.py
backend/models/: __init__.py  advertiser.py  agency.py  audio_cut.py  audio_delivery.py  audio_qc_result.py  audio_version.py  audit_log.py  (+51 more)
(+1339 files in other folders)
